--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,15 @@
   resize: none;
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 
 
 @media (min-width: 768px) {
