--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,50 @@
   resize: none;
 }
 
+.bg-primary {
+  background-color: #dd4747 !important;
+}
+
+.btn-custom-primary {
+  color: #fff;
+  background-color: #dd4747 !important;
+  border-color: #dd4747;
+}
+
+.btn-custom-primary:hover {
+  color: #fff;
+  background-color: #cc1610 !important;
+  border-color: #b8110b;
+}
+
+.btn-custom-primary:active {
+  background-color: #b8110b !important;
+  border-color: #a80f0a;
+}
+
+.btn-custom-primary:focus, .btn-custom-primary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(242, 22, 14, 0.5);
+}
+
+.btn-custom-primary.disabled, .btn-custom-primary:disabled {
+  color: #fff;
+  background-color: #b8110b;
+  border-color: #b8110b;
+}
+
+
+.btn-custom-primary:not(:disabled):not(.disabled):active, .btn-custom-primary:not(:disabled):not(.disabled).active,
+.show > .btn-custom-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #b8110b;
+  border-color: #750c05;
+}
+
+.btn-custom-primary:not(:disabled):not(.disabled):active:focus, .btn-custom-primary:not(:disabled):not(.disabled).active:focus,
+.show > .btn-custom-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(242, 22, 14, 0.5);
+}
+
 .unselectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
