new color scheme

--- a/css/global.css
+++ b/css/global.css
@@ -15,48 +15,50 @@
 }
 
 .bg-primary {
-  background-color: #dd4747 !important;
+  background-color: #028E9B !important;
 }
 
 .btn-custom-primary {
   color: #fff;
-  background-color: #dd4747 !important;
-  border-color: #dd4747;
+  background-color: #BF9130 !important;
+  border-color: #BF9130;
 }
 
 .btn-custom-primary:hover {
   color: #fff;
-  background-color: #cc1610 !important;
-  border-color: #b8110b;
+  background-color: #A67000 !important;
+  border-color: #855900;
 }
 
 .btn-custom-primary:active {
-  background-color: #b8110b !important;
-  border-color: #a80f0a;
+  background-color: #855900 !important;
+  border-color: #785000;
 }
 
 .btn-custom-primary:focus, .btn-custom-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(242, 22, 14, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(204, 152, 49, 0.5);
 }
 
 .btn-custom-primary.disabled, .btn-custom-primary:disabled {
   color: #fff;
-  background-color: #b8110b;
-  border-color: #b8110b;
+  background-color: #A67000 !important;
+  border-color: #855900;
 }
 
 
 .btn-custom-primary:not(:disabled):not(.disabled):active, .btn-custom-primary:not(:disabled):not(.disabled).active,
 .show > .btn-custom-primary.dropdown-toggle {
   color: #fff;
-  background-color: #b8110b;
-  border-color: #750c05;
+  background-color: #A67000 !important;
+  border-color: #855900;
 }
 
 .btn-custom-primary:not(:disabled):not(.disabled):active:focus, .btn-custom-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-custom-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(242, 22, 14, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(204, 152, 49, 0.5);
 }
+
+
 
 .unselectable {
   -webkit-touch-callout: none;
@@ -67,7 +69,55 @@
   user-select: none;
 }
 
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #028E9B;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(2, 142, 155, 0.25);
+}
 
+
+
+.custom-range:focus::-webkit-slider-thumb {
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(3, 188, 255, 0.25);
+}
+
+.custom-range:focus::-moz-range-thumb {
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(3, 188, 255, 0.25);
+}
+
+.custom-range:focus::-ms-thumb {
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(3, 188, 255, 0.25);
+}
+
+.custom-range::-webkit-slider-thumb {
+  background-color: #028E9B;
+}
+
+.custom-range::-webkit-slider-thumb:active {
+  background-color: #96eeff;
+}
+
+.custom-range::-moz-range-thumb {
+  background-color: #028E9B;
+}
+
+.custom-range::-moz-range-thumb:active {
+  background-color: #96eeff;
+}
+
+.custom-range::-ms-thumb {
+  background-color: #028E9B;
+}
+
+.custom-range::-ms-thumb:active {
+  background-color: #96eeff;
+}
+
+.progress-bar {
+  background-color: #028E9B;
+}
 
 @media (min-width: 768px) {
 
